# bindgen_test

./: Cargo.toml  README.md  build.rs
my_c_lib/include/: my_c_lib.h
my_c_lib/src/: my_c_lib.c
src/: main.rs  my_c_lib_bindings.rs
